src/objects/Trade_Reference__c.object
<CustomObject>
    <fields>
        <fullName>AU_Application_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AU Application Request</label>
        <referenceTo>AU_Application_Request__c</referenceTo>
        <relationshipLabel>Trade Reference</relationshipLabel>
        <relationshipName>Trade_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trade Reference</relationshipLabel>
        <relationshipName>Trade_Reference</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Date_Open__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter date in (mm/dd/yyyy) format.</inlineHelpText>
        <label>Date Open</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trade_Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Trade_Payment_History__c</fullName>
        <label>Trade Payment History</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Trade_Supplier_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trade Supplier Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>EMAP_Trade_reference_name_mandatory</fullName>
        <active>true</active>
        <description>Validation rule is created to avoid blank Trade Ref name, while creating new credit application.</description>
        <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Supplier name can not be blank. Please enter supplier name.</errorMessage>
    </validationRules>
</CustomObject>